<resources>
    <string name="app_name">Calculator</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_0">0</string>
    <string name="oper_percentage">%</string>
    <string name="oper_brack1">(</string>
    <string name="oper_brack2">)</string>
    <string name="oper_c">C</string>
    <string name="oper_plus_minus">+/-</string>
    <string name="oper_point">.</string>
    <string name="oper_mc">mc</string>
    <string name="oper_mplus">m+</string>
    <string name="oper_mminus">m-</string>
    <string name="oper_mrecord">mr</string>
    <string name="oper_divid"> ÷ </string>
    <string name="oper_multiple">x</string>
    <string name="oper_minus"> - </string>
    <string name="oper_plus"> + </string>
    <string name="oper_equals"> = </string>


    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="naturalLog">ln</string>
    <string name="hyperbolicSine">sinh</string>
    <string name="hyperbolicCosine">cosh</string>
    <string name="hyperbolicTan">tanh</string>
    <string name="log">log</string>
    <string name="Mod">%</string>
    <string name="inverse">1/x</string>
    <string name="factorial">x!</string>>
    <string name="sqrt">√</string>
    <string name="cuberoot">\u221B</string>
    <string name="square">x²</string>
    <string name="cube">x\u00B3</string>
    <string name="tenpow">10\u207F</string>
    <string name="sininv">sin\u207B\u00B9</string>
    <string name="sinhinv">sinh\u207B\u00B9</string>
    <string name="cosinv">cos\u207B\u00B9</string>
    <string name="coshinv">cosh\u207B\u00B9</string>
    <string name="taninv">tan\u207B\u00B9</string>
    <string name="tanhinv">tanh\u207B\u00B9</string>
    <string name="logbase2">log2</string>
    <string name="posneg">±</string>
    <string name="arrow">↑</string>
    <string name="xpown">xⁿ</string>
    <string name="epown">eⁿ</string>
    <string name="pi">π</string>
    <string name="exit">Exit</string>
    <string name="themem">Change Theme</string>
    <string name="calculate">Calculate</string>
    <string name="rate_it">Rate</string>
    <string name="settings">Settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="vibration">Vibration</string>
    <string name="show_memory_keys">Show memory keys</string>
    <string name="thousand_seperator">Thousand separator</string>
    <string name="scientific_calculator">Scientific Calculator</string>


    <!-- colors- -->
    <string name="textcolor">Text Color</string>
    <string name="ColorRest">RESTORE DEFAULTS</string>
    <string name="backgroundColor">Background color</string>
    <string name="primarycolor">Primary color</string>
    <string name="setting">SETTING</string>
    <string name="theme">THEME</string>

    <string name="admob_interstitial_id">ca-app-pub-7505360572028906/6626107670</string>
    <string name="very_fast_and_simple">Very fast and simple</string>
    <string name="calculator">Calculator</string>
    <!--<string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>-->

</resources>
