<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/calculate"
            android:checked="true"
            android:icon="@drawable/ic_calc_black_24dp"
            android:title="@string/calculate" />
        <item
            android:id="@+id/rate_it"
            android:icon="@drawable/ic_rate_review_black_24dp"
            android:title="@string/rate_it" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/exit" />
    </group>
</menu>