<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:paddingTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/textcolor"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            android:background="@color/cardview_dark_background">

            <TextView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_margin="1.5dp"
                android:id="@+id/txtColor"
                android:background="@android:color/background_dark"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:layout_weight="0.4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/backgroundColor"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="1"
            android:id="@+id/textView3" />

        <LinearLayout android:orientation="vertical"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/cardview_dark_background">

            <TextView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_margin="1.5dp"
                android:id="@+id/backgroundColor"
                android:background="@android:color/background_light"/>

        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:layout_weight="0.4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/primarycolor"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="1"
            android:id="@+id/textView2" />

        <LinearLayout android:orientation="vertical"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/cardview_dark_background">

            <TextView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_margin="1.5dp"
                android:id="@+id/primaryColor"
                android:background="@android:color/background_light"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:paddingTop="20dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:gravity="right|center_horizontal"
                android:text="@string/ColorRest"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_weight="1"
                android:id="@+id/resetColor" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.22">
    </LinearLayout>
</LinearLayout>